# ExParserR

./: .clang-format  .deepsource.toml  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/parser/: dfa.cpp  dfa.h  grammar.cpp  grammar.h  item.cpp  item.h  item_set.cpp  item_set.h  parser.cpp  parser.h  symbol.cpp  symbol.h
src/simple_lexer/: lexer.cpp  lexer.h  token.h
src/util/: all.h  functional.h  overloaded.h  table.h  type.h
